# pia1

./: DU PIA1.cpp  README.md  Semestralka_PIA1.cpp  advekce.cpp  gitTest.txt  kruh.cpp  navrhy_na_semestralni_prace.md  osnova.md
Kruh/: Kruh.cpp
lekce1/: README.md  gitPoznamky.md  gitTest.txt  main.cpp  main_with_args.cpp
lekce1/prvniProgram/: main.cpp
lekce2/: plotData.py  presnost.cpp
lekce2/arithmetic-playground/: euler_arithmetic.cpp  euler_arithmetic_templated.cpp
lekce3/arrays/: introductionToArraysPart2.cpp  introductionToArraysPart2_with_functions.cpp  introductionToArrys.cpp  introductionToArrys_with_functions.cpp  oneAndTwoDimensions.cpp  stdArrays.cpp  stdVectors.cpp  tnlNDArrays.cu  tnlVectors.cu  variousTypesOfArrays.cpp
lekce4/: advekce.cpp
lekce4/functions/: functionsAndArrays.cpp  introductionToFunctions.cpp
lekce5/: stdMap.cpp  zaklady.cpp
lekce6/: Vector with operators  kruh.cpp  matrix.cpp  objekty.cpp  objekty_part2.cpp
lekce8/: derivedClass.cpp  tvary.cpp
lekce8/first_steps_cmake/: CMakeLists.txt  main.cpp
lekce8/first_steps_make/: Makefile  main.cpp  math_functions.cpp
lekce8/stages/: compilation.md
lekce9/lambdaFunctions/: lambdaFunctions.cpp  lambdaFunctionsAndStdAlgorithms.cpp
prvniProgram/: main.cpp
